--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -146,16 +146,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button"
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="100"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="casual"
+            android:gravity="center"
+            android:hint="Sign Up"
             android:onClick="sign_up"
-            android:text="Sign up"
-            android:textColor="#000000" />
+            android:text="Sign Up"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/textView4"
