--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
+    <item
+        android:icon="@drawable/ic_baseline_more_vert_24"
+        android:title=""
+        app:showAsAction="always">
+            <menu>
+                <item
+                    android:icon="@drawable/list_icon"
+                    android:title="My Lists"></item>
+
+                <item
+                    android:icon="@drawable/about_icon"
+                    android:title="About"></item>
+            </menu>
+    </item>
+
 </menu>
