--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,7 +102,8 @@
             android:fontFamily="casual"
             android:gravity="center"
             android:text="Stay Connect?"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <Space
             android:layout_width="match_parent"
