--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,15 @@
         android:inputType="textPassword"
         android:gravity="center" />
 
+    <Switch
+        android:id="@+id/switch_login"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:fontFamily="casual"
+        android:gravity="center"
+        android:text="Show Password" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
