18/12/2021 - 23:30 update SettingsActivity update manu - add back button

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -31,4 +31,9 @@
                 android:title="Log Out"></item>
         </menu>
     </item>
+    <item
+        android:icon="@drawable/ic_back"
+        android:title="Back"
+        app:showAsAction="always" />
+
 </menu>
