--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,13 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_weight="25" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_image_settings"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
+        android:background="@color/transparent"
         android:onClick="change_image"
-        app:srcCompat="@drawable/user_icon"
+        android:src="@drawable/user_icon"
+        app:civ_border_width="1dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Space
@@ -33,7 +35,8 @@
         android:gravity="center"
         android:text="Profile Image"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="match_parent"
@@ -65,7 +68,8 @@
                 android:gravity="center"
                 android:text="First Name"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_first_name_settings"
@@ -88,7 +92,8 @@
                 android:gravity="center"
                 android:text="Last Name"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_last_name_settings"
@@ -111,7 +116,8 @@
                 android:gravity="center"
                 android:text="Age"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_age_settings"
@@ -134,7 +140,8 @@
                 android:gravity="center"
                 android:text="Home Address"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_home_address_settings"
@@ -157,7 +164,8 @@
                 android:gravity="center"
                 android:text="Phone Number"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_phone_number_settings"
@@ -168,6 +176,19 @@
                 android:gravity="center"
                 android:hint="Type Text Here"
                 android:inputType="phone" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:text="After entering all the required data, click Update"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
         </LinearLayout>
     </ScrollView>
