--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -23,7 +23,7 @@
         app:showAsAction="always">
         <menu>
             <item
-                android:icon="@drawable/setting_icon"
+                android:icon="@drawable/settings_icon"
                 android:title="Settings"></item>
 
             <item
