--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="FloatStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">casual</item>
+    </style>
+
 </resources>
