--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,37 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:icon="@drawable/ic_baseline_more_vert_24"
-        android:title=""
-        app:showAsAction="always">
-            <menu>
-                <item
-                    android:icon="@drawable/list_icon"
-                    android:title="My Lists"></item>
-
-                <item
-                    android:icon="@drawable/about_icon"
-                    android:title="About"></item>
-            </menu>
-    </item>
-
-    <item
-        android:icon="@drawable/user_icon"
-        android:title=""
-        app:showAsAction="always">
-        <menu>
-            <item
-                android:icon="@drawable/settings_icon"
-                android:title="Settings"></item>
-
-            <item
-                android:icon="@drawable/log_out_icon"
-                android:title="Log Out"></item>
-        </menu>
-    </item>
-    <item
-        android:icon="@drawable/ic_back"
-        android:title="Back"
-        app:showAsAction="always" />
+        android:icon="@drawable/log_out_icon"
+        android:title="Log Out"
+        app:showAsAction="always"></item>
 
 </menu>
