--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/allura</item>
+        <item>@font/annie_use_your_telescope</item>
+        <item>@font/arizonia</item>
     </array>
 </resources>
