--- a/app/src/main/res/layout/bottom_sheet_layout_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_list.xml
@@ -8,6 +8,7 @@
     android:padding="30dp">
 
     <ImageView
+        android:id="@+id/iv_list_layout"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_gravity="center"
