--- a/app/src/main/res/layout/custom_listview_layout.xml
+++ b/app/src/main/res/layout/custom_listview_layout.xml
@@ -92,7 +92,7 @@
 
                 <TextView
                     android:id="@+id/item_title"
-                    android:layout_width="270dp"
+                    android:layout_width="235dp"
                     android:layout_height="match_parent"
                     android:fontFamily="casual"
                     android:gravity="center"
@@ -102,12 +102,19 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/options"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ic_baseline_more_vert_24"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/icon_list"
+                        tools:ignore="SpeakableTextPresentCheck" />
+                </LinearLayout>
 
             </LinearLayout>
 
