--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -115,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
-                android:onClick="create_list"
+                android:onClick="create_task"
                 android:src="@drawable/ic_add"
                 app:backgroundTint="@color/black"
                 app:layout_anchor="@id/bottomAppBar"
