14/01/2022 - 23:00 update TasksActivity - add image for task

--- a/app/src/main/res/layout/bottom_sheet_layout_task.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_task.xml
@@ -190,7 +190,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/user_image_settings"
+                android:id="@+id/task_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
