--- a/app/src/main/res/layout/custom_listview_layout_tasks.xml
+++ b/app/src/main/res/layout/custom_listview_layout_tasks.xml
@@ -66,7 +66,7 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="Month"
-                android:textColor="@color/black"
+                android:textColor="#808080"
                 android:textSize="12sp" />
 
         </LinearLayout>
@@ -76,7 +76,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:alpha="0.5"
-            android:background="@color/black" />
+            android:background="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
