05/02/2022 - 21:00 update ShowTaskMapActivity update activity_splash.xml update activity_settings.xml

--- a/app/src/main/res/layout/activity_show_task_map.xml
+++ b/app/src/main/res/layout/activity_show_task_map.xml
@@ -160,11 +160,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
-                android:src="@drawable/ic_add"
+                android:onClick="click"
+                android:src="@drawable/show_address_in_map"
                 app:backgroundTint="@color/black"
                 app:layout_anchor="@id/bottomAppBar"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:onClick="click"/>
+                app:maxImageSize="30dp"
+                tools:ignore="SpeakableTextPresentCheck" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </LinearLayout>
