--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,7 +142,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar_login"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.DeviceDefault.ProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
