--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -143,7 +143,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar_signup"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.DeviceDefault.ProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
