--- a/app/src/main/res/layout/bottom_sheet_layout_tasks_day.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_tasks_day.xml
@@ -8,7 +8,7 @@
     android:padding="30dp">
 
     <ImageView
-        android:id="@+id/iv_list_layout"
+        android:id="@+id/iv_TasksDay_layout"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_gravity="center"
@@ -66,7 +66,7 @@
 
     <Button
         android:id="@+id/add_tasksDay"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="#FFFFFF"
