--- a/app/src/main/res/layout/activity_show_task_map.xml
+++ b/app/src/main/res/layout/activity_show_task_map.xml
@@ -73,7 +73,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_task_city"
+                android:id="@+id/tv_task_current_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -81,32 +81,19 @@
                 android:fontFamily="@font/annie_use_your_telescope"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="City"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBar_showMap"
-                style="@android:style/Widget.DeviceDefault.ProgressBar"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:visibility="visible" />
-
-            <TextView
-                android:id="@+id/tv_task_country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="50"
-                android:fontFamily="@font/annie_use_your_telescope"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="Country"
+                android:text="Current Address"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar_showMap"
+            style="@android:style/Widget.DeviceDefault.ProgressBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_distance"
