--- a/app/src/main/res/layout/custom_listview_layout_tasks.xml
+++ b/app/src/main/res/layout/custom_listview_layout_tasks.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -76,7 +76,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:alpha="0.5"
-            android:background="@color/black"/>
+            android:background="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -150,11 +150,11 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="20"
                             android:fontFamily="casual"
+                            android:gravity="center"
                             android:singleLine="true"
                             android:text="Notes"
                             android:textColor="@color/black"
-                            android:textSize="10sp"
-                            android:gravity="center"/>
+                            android:textSize="10sp" />
 
                         <TextView
                             android:id="@+id/tv_task_notes"
@@ -162,11 +162,11 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="20"
                             android:fontFamily="casual"
+                            android:gravity="center"
                             android:singleLine="true"
                             android:text="Notes"
                             android:textColor="@color/black"
-                            android:textSize="8sp"
-                            android:gravity="center"/>
+                            android:textSize="8sp" />
 
                     </LinearLayout>
 
