--- a/app/src/main/res/layout/bottom_sheet_layout_task.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_task.xml
@@ -6,7 +6,26 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/bottom_sheet_style"
-    android:padding="30dp">
+    android:paddingTop="15dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    android:paddingBottom="30dp">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        app:srcCompat="@drawable/swipe_icon"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <ImageView
+        android:id="@+id/cancel_bottom_sheet_dialog_task"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="right"
+        app:srcCompat="@drawable/close_icon" />
 
     <ImageView
         android:layout_width="75dp"
